made every gameboard number a class

--- a/index.html
+++ b/index.html
@@ -46,47 +46,47 @@
                 <div class="math">
                     <h4>Math</h4>
                     <hr>
-                    <h5>100</h5>
-                    <h5>200</h5>
-                    <h5>300</h5>
-                    <h5>400</h5>
-                    <h5>500</h5>
+                    <h5 class="mathOne">100</h5>
+                    <h5 class="mathTwo">200</h5>
+                    <h5 class="mathThree">300</h5>
+                    <h5 class="mathFour">400</h5>
+                    <h5 class="mathFive">500</h5>
                 </div>
                 <div class="history">
                     <h4>History</h4>
                     <hr>
-                    <h5>100</h5>
-                    <h5>200</h5>
-                    <h5>300</h5>
-                    <h5>400</h5>
-                    <h5>500</h5>
+                    <h5 class="hsOne">100</h5>
+                    <h5 class="hsTwo">200</h5>
+                    <h5 class="hsThree">300</h5>
+                    <h5 class="hsFour">400</h5>
+                    <h5 class="hsFive">500</h5>
                 </div>
                 <div class="science">
                     <h4>Science</h4>
                     <hr>
-                    <h5>100</h5>
-                    <h5>200</h5>
-                    <h5>300</h5>
-                    <h5>400</h5>
-                    <h5>500</h5>
+                    <h5 class="sciOne">100</h5>
+                    <h5 class="sciTwo">200</h5>
+                    <h5 class="sciThree">300</h5>
+                    <h5 class="sciFour">400</h5>
+                    <h5 class="sciFive">500</h5>
                 </div>
                 <div class="music">
                     <h4>Music</h4>
                     <hr>
-                    <h5>100</h5>
-                    <h5>200</h5>
-                    <h5>300</h5>
-                    <h5>400</h5>
-                    <h5>500</h5>
+                    <h5 class="musOne">100</h5>
+                    <h5 class="musTwo">200</h5>
+                    <h5 class="musThree">300</h5>
+                    <h5 class="musFour">400</h5>
+                    <h5 class="musFive">500</h5>
                 </div>
                 <div class="sports">
                     <h4>Sports</h4>
                     <hr>
-                    <h5>100</h5>
-                    <h5>200</h5>
-                    <h5>300</h5>
-                    <h5>400</h5>
-                    <h5>500</h5>
+                    <h5 class="sportsOne">100</h5>
+                    <h5 class="sportsTwo">200</h5>
+                    <h5 class="sportsThree">300</h5>
+                    <h5 class="sportsFour">400</h5>
+                    <h5 class="sportsFive">500</h5>
                 </div>
 
 
