Styled start and retstart button also the timer

--- a/index.html
+++ b/index.html
@@ -98,15 +98,21 @@
 
             <div class="buttonContainer">
 
-                <div class="startBtn"></div>
+                <div class="startBtn">
+                    <button class="sBtn">Start Game</button>
+                </div>
 
 
 
-                <div class="timer"></div>
+                <div class="timeBox">
+                    <h4 class="timer">00:00</h4>
+                </div>
 
                 
                 
-                <div class="restartBtn"></div>
+                <div class="restartBtn">
+                    <button class="rBtn">Restart</button>
+                </div>
 
 
             </div>
