start game function selects random player

--- a/index.html
+++ b/index.html
@@ -109,7 +109,7 @@
             <div class="buttonContainer">
 
                 <div class="startBtn">
-                    <button class="sBtn">Start Game</button>
+                    <button class="sBtn" onclick="startGame()">Start Game</button>
                 </div>
 
 
