--- a/index.html
+++ b/index.html
@@ -52,7 +52,7 @@
                 <div class="math">
                     <h4>Math</h4>
                     <hr>
-                    <h5 class="mathOne">100</h5>
+                    <h5 class="mathOne" onclick="toggleMathOne()">100</h5>
                     <h5 class="mathTwo">200</h5>
                     <h5 class="mathThree">300</h5>
                     <h5 class="mathFour">400</h5>
@@ -138,12 +138,12 @@
 
                 <div class="playerOne">
                     <h4>Player One</h4>
-                        <div class="playOne">Points: <span class="scoreBoard">0</span></div>
+                        <div class="playOne">Points: <span class="scoreBoardOne">0</span></div>
                 </div>
                 <h3>ScoreBoard</h3>
                 <div class="playerTwo">
                     <h4>Player Two</h4>
-                        <div class="playTwo">Points: <span class="scoreBoard">0</span></div>
+                        <div class="playTwo">Points: <span class="scoreBoardTwo">0</span></div>
                 </div>
 
 
