--- a/index.html
+++ b/index.html
@@ -53,10 +53,10 @@
                     <h4>Math</h4>
                     <hr>
                     <h5 class="mathOne" onclick="toggleMathOne()">100</h5>
-                    <h5 class="mathTwo">200</h5>
-                    <h5 class="mathThree">300</h5>
-                    <h5 class="mathFour">400</h5>
-                    <h5 class="mathFive">500</h5>
+                    <h5 class="mathTwo" onclick="toggleMathTwo()">200</h5>
+                    <h5 class="mathThree" onclick="toggleMathThree()">300</h5>
+                    <h5 class="mathFour" onclick="toggleMathFour()">400</h5>
+                    <h5 class="mathFive" onclick="toggleMathFive()">500</h5>
                 </div>
                 
                 <div class="history">
