history questions added

--- a/index.html
+++ b/index.html
@@ -62,11 +62,11 @@
                 <div class="history">
                     <h4>History</h4>
                     <hr>
-                    <h5 class="hsOne">100</h5>
-                    <h5 class="hsTwo">200</h5>
-                    <h5 class="hsThree">300</h5>
-                    <h5 class="hsFour">400</h5>
-                    <h5 class="hsFive">500</h5>
+                    <h5 class="hsOne" onclick="toggleHsOne()">100</h5>
+                    <h5 class="hsTwo" onclick="toggleHsTwo()">200</h5>
+                    <h5 class="hsThree" onclick="toggleHsThree()">300</h5>
+                    <h5 class="hsFour" onclick="toggleHsFour()">400</h5>
+                    <h5 class="hsFive" onclick="toggleHsFive()">500</h5>
                 </div>
                 
                 <div class="science">
