science question added

--- a/index.html
+++ b/index.html
@@ -72,21 +72,21 @@
                 <div class="science">
                     <h4>Science</h4>
                     <hr>
-                    <h5 class="sciOne">100</h5>
-                    <h5 class="sciTwo">200</h5>
-                    <h5 class="sciThree">300</h5>
-                    <h5 class="sciFour">400</h5>
-                    <h5 class="sciFive">500</h5>
+                    <h5 class="sciOne" onclick="toggleSciOne()">100</h5>
+                    <h5 class="sciTwo" onclick="toggleSciTwo()">200</h5>
+                    <h5 class="sciThree" onclick="toggleSciThree()">300</h5>
+                    <h5 class="sciFour" onclick="toggleSciFour()">400</h5>
+                    <h5 class="sciFive" onclick="toggleSciFive()">500</h5>
                 </div>
                 
                 <div class="music">
                     <h4>Music</h4>
                     <hr>
-                    <h5 class="musOne">100</h5>
-                    <h5 class="musTwo">200</h5>
-                    <h5 class="musThree">300</h5>
-                    <h5 class="musFour">400</h5>
-                    <h5 class="musFive">500</h5>
+                    <h5 class="musOne" onclick="toggleMusOne()">100</h5>
+                    <h5 class="musTwo" onclick="toggleMusTwo()">200</h5>
+                    <h5 class="musThree" onclick="toggleMusThree()">300</h5>
+                    <h5 class="musFour" onclick="toggleMusFour()">400</h5>
+                    <h5 class="musFive" onclick="toggleMusFive()">500</h5>
                 </div>
                
                 <div class="sports">
