sport questions added

--- a/index.html
+++ b/index.html
@@ -92,11 +92,11 @@
                 <div class="sports">
                     <h4>Sports</h4>
                     <hr>
-                    <h5 class="sportsOne">100</h5>
-                    <h5 class="sportsTwo">200</h5>
-                    <h5 class="sportsThree">300</h5>
-                    <h5 class="sportsFour">400</h5>
-                    <h5 class="sportsFive">500</h5>
+                    <h5 class="sportsOne" onclick="toggleSportsOne()">100</h5>
+                    <h5 class="sportsTwo" onclick="toggleSportsTwo()">200</h5>
+                    <h5 class="sportsThree" onclick="toggleSportsThree()">300</h5>
+                    <h5 class="sportsFour" onclick="toggleSportsFour()">400</h5>
+                    <h5 class="sportsFive" onclick="toggleSportsFive()">500</h5>
                 </div>
 
 
