restart button changes score back to 0

--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
                     <p>Hit "start game" and game will choose a player to go first. <br>
                         You will have 20 seconds to answer the question. <br>
                         Points will range from 100 to 500 points. <br>
-                        Player to hit 3,000 points first, wins! <br>
+                        Player to hit 2,500 points first, wins! <br>
                         To start game over you can press the "restart" button. <br>
                         May best player win! <br>
                         Enjoy!
@@ -121,7 +121,7 @@
                 
                 
                 <div class="restartBtn">
-                    <button class="rBtn">Restart</button>
+                    <button class="rBtn" onclick="restartBtn()">Restart</button>
                 </div>
 
 
