function that determines winner

--- a/index.html
+++ b/index.html
@@ -126,9 +126,9 @@
 
 
 
-                <div class="timeBox">
+                <!-- <div class="timeBox">
                     <h4 class="timer">00:00</h4>
-                </div>
+                </div> -->
 
                 
                 
